app/0.2.x/index.md
---
title: Documentation for Kong
is_homepage: true
---

<div class="docs-grid">
  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-window.svg" /><a href="https://konghq.com/install/">Installation</a></h3>
    <p>You can install Kong on most Linux distributions and macOS. We even provide the source so you can compile it yourself.</p>
    <a href="https://konghq.com/install/">Install Kong &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-quickstart.svg" /><a href="/{{page.kong_version}}/getting-started/quickstart">5-minute Quickstart</a></h3>
    <p>Learn how to start Kong, add your API, enable plugins, and add consumers in under thirty seconds.</p>
    <a href="/{{page.kong_version}}/getting-started/quickstart">Start using Kong &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/configuration">Configuration</a></h3>
    <p>Want to further optimize your Kong cluster, database, or configure NGINX? Dive into the configuration.</p>
    <a href="/{{page.kong_version}}/configuration">Start configuring Kong &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/admin-api">API reference</a></h3>
    <p>Ready to learn the underlying interface? Browse the API reference to learn how to start making requests.</p>
    <a href="/{{page.kong_version}}/admin-api">Explore the interface &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/cli">CLI reference</a></h3>
    <p>Want a better understanding of the CLI tool and its options? Browse the detailed command reference.</p>
    <a href="/{{page.kong_version}}/cli">Use the CLI &rarr;</a>
  </div>
</div>
